# Virtual-Assistant

./: .gitignore  README.md  pyproject.toml
Virtual-Assistant/: domain.yml  start_actions_server.sh  start_rasa_server.sh
Virtual-Assistant/actions/: allergy.py  appointment.py  basic_health.py  bill.py  doctor_note.py  emergency_contact.py  nearby.py  news.py  prescription.py  user.py  vaccination.py
Virtual-Assistant/actions/user/: get_user_details.py
Virtual-Assistant/data/nlu/: allergy.yml  appointment.yml  basic_health.yml  bill.yml  doctor_note.yml  emergency_contact.yml  nearby.yml  news.yml  prescription.yml  user.yml  vaccination.yml
Virtual-Assistant/data/rules/: allergy.yml  appointment.yml  basic_health.yml  bill.yml  doctor_note.yml  emergency_contact.yml  nearby.yml  news.yml  prescription.yml  user.yml  vaccination.yml
