[tool.poetry]
name = "virtual-assistant"
version = "0.1.0"
description = ""
authors = ["Harikeshav R <r.harikeshav@gmail.com>"]
readme = "README.md"
packages = [{include = "virtual_assistant"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
rasa = "^3.4.2"
notify-run = "^0.0.15"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
